--- a/.github/workflows/receiver-workflow.yml
+++ b/.github/workflows/receiver-workflow.yml
@@ -10,6 +10,18 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Install lizard
+      run: pip install lizard
+
+    - name: Limit complexity
+      run: $HOME/.local/bin/lizard --CCN 5
+      
+    - name: Install jscpd
+      run: sudo npm install -g jscpd
+
+    - name: Check duplications
+      run: jscpd . --min-lines 3 --min-tokens 48 --threshold 0
+      
     - name: install coverage tool
       run: |
         sudo apt-get update
