--- a/.github/workflows/streamdatawithpipe.yml
+++ b/.github/workflows/streamdatawithpipe.yml
@@ -18,6 +18,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Build receiver for pipe
-      run: javac src/main/java/../*.java
+      run: javac src/main/java/**/*.java
+     
       
     
