--- a/.github/workflows/streamdatawithpipe.yml
+++ b/.github/workflows/streamdatawithpipe.yml
@@ -18,9 +18,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Build receiver for pipe
-            mkdir bin
-            shopt -s globstar 
-      run: javac -d bin src/main/java/**/*.java
+       run: javac  *.java
      
       
     
