--- a/.github/workflows/streamdatawithpipe.yml
+++ b/.github/workflows/streamdatawithpipe.yml
@@ -10,15 +10,15 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: Build sender for pipe
+    - name: Build receiver for pipe
       run: g++ -Wall -Wextra -fprofile-arcs -ftest-coverage -o receivestream *.c*
 
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build receiver for pipe
-       run: javac  *.java
+    - name: Build sender for pipe
+       run: javac src/main/java/**/*.java
      
       
     
