--- a/.github/workflows/streamdatawithpipe.yml
+++ b/.github/workflows/streamdatawithpipe.yml
@@ -17,9 +17,10 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build and Generate coverage
-      run: mvn test jacoco:report
-      
+        
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml    
+    
     - name: Build sender for pipe
       run: javac src/main/java/**/*.java
       
