--- a/.github/workflows/streamdatawithpipe.yml
+++ b/.github/workflows/streamdatawithpipe.yml
@@ -18,10 +18,8 @@ jobs:
       with:
         java-version: 1.8
         
-    - name: Build and Generate coverage
+    - name: Build sender for pipe
       run: mvn install
 
-
-
-      
-    
+    - name: pipe
+      run:  java -jar BatteryMgmtSender-0.0.1-SNAPSHOT.jar | ./receivestream
