--- a/.github/workflows/streamdatawithpipe.yml
+++ b/.github/workflows/streamdatawithpipe.yml
@@ -22,4 +22,4 @@ jobs:
       run: mvn install
 
     - name: pipe
-      run:  java -jar BatteryMgmtSender-0.0.1-SNAPSHOT.jar | ./receivestream
+      run:  java  src/main/java/battery/BatteryParameterStreamerMain.java | ./receivestream
