--- a/.github/workflows/streamdatawithpipe.yml
+++ b/.github/workflows/streamdatawithpipe.yml
@@ -22,4 +22,4 @@ jobs:
       run: mvn install
 
     - name: pipe
-      run:  java  battery/BatteryParameterStreamerMain.java | ./receivestream
+      run:  java -ea -classpath . src/main/java/battery/BatteryParameterStreamerMain | ./receivestream
